--- a/JadwalMe/Views/Home/Blog.cshtml
+++ b/JadwalMe/Views/Home/Blog.cshtml
@@ -80,6 +80,46 @@
                 </div>
             </div>
         </div>
+        <div class="row d-flex justify-content-between mb-4">
+            <div class="col">
+                <div class="row">
+                    <div class="col">
+                        <div class="card border-0 shadow-sm">
+                            <div class="card-body">
+                                <h6 class="font-weight-bold text-macolor">KATA KUNCI POPULER</h6>
+                                <hr>
+                                <div class="row mr-1 ml-1 d-flex justify-content-between">
+                                    <div class="card" style="width: 14rem;">
+                                        <button class="btn btn-sm btn-info">Sigma</button>
+                                    </div>
+                                    <div class="card" style="width: 14rem;">
+                                        <button class="btn btn-sm btn-info">Programmer</button>
+                                    </div>
+                                    <div class="card" style="width: 14rem;">
+                                        <button class="btn btn-sm btn-info">Kehidupan</button>
+                                    </div>
+                                    <div class="card" style="width: 14rem;">
+                                        <button class="btn btn-sm btn-info">Pria</button>
+                                    </div>
+                                    <div class="card" style="width: 14rem;">
+                                        <button class="btn btn-sm btn-info">Kesehatan</button>
+                                    </div>
+                                    <div class="card" style="width: 14rem;">
+                                        <button class="btn btn-sm btn-info">China</button>
+                                    </div>
+                                    <div class="card" style="width: 14rem;">
+                                        <button class="btn btn-sm btn-info">JavaScript</button>
+                                    </div>
+                                    <div class="card" style="width: 14rem;">
+                                        <button class="btn btn-sm btn-info">Komputer</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="row d-flex justify-content-between">
             <div class="col">
                 <div class="row">
