--- a/JadwalMe/Views/Home/Buku.cshtml
+++ b/JadwalMe/Views/Home/Buku.cshtml
@@ -3,5 +3,191 @@
 *@
 @{
 }
+<div class="container-fluid" style="background-color: #FAFAFA;">
+    <div class="container-sm">
+        <div class="row d-flex justify-content-between mb-4">
+            <div class="col">
+                <div class="row mb-4">
+                    <div class="col">
+                        <div class="card border-0 shadow-sm">
+                            <div class="card-body">
+                                <div class="row mr-1 ml-1 d-flex justify-content-between">
+                                    <div class="col-10">
+                                        <input class="form-control" type="text" placeholder="Cari artikel...">
+                                    </div>
+                                    <a role="button" class="col-2 btn" style="background-color: #FC7666;">
+                                        <img src="img/send-exclamation-fill.svg" class="iconsvg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-bigpost">
+                    <a href="#">
+                        <img class="bigpost" src="~/img/default.png" alt="">
+                        <div class="desk-bigpost">
+                            <h3 class="text-white font-weight-bold">Aturan Yang Selalu Ada Dalam <br> Buku Sigma Male</h3>
+                        </div>
+                    </a>
+                </div>
 
-<p>Hola 2</p>
+            </div>
+            <div class="col">
+                <div class="row bg-white masidebar d-flex justify-content-end shadow-sm ml-1">
+                    <div class="col-12 d-flex justify-content-center">
+                        <div class="card border-0" style="width: 22rem;">
+                            <div class="card-body">
+                                <h6 class="font-weight-bold text-macolor">BUKU POPULER</h6>
+                                <hr>
+                                <div class="row mb-2">
+                                    <div class="col-4">
+                                        <a href="">
+                                            <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="col-8 text-dark">
+                                        <div class="row  d-flex justify-content-start p-3">
+                                                <a href="#" class="text-dark mt-2 mb-2">KIMIA : The Big Three</a>
+                                                
+                                                <p class="text-macolor mb-2" style="font-size: 9pt;">
+                                                    Pengarang : Zulia Amalia <br>
+                                                    Penerbit : Naufal Hanif <br>
+                                                    Rp. 24.000 <br>
+                                                    1821 Jumlah Pembeli <br>
+                                                </p>
+                                         </div>
+                                    </div>
+                                </div>
+                                <div class="row mb-2">
+                                    <div class="col-4">
+                                        <a href="">
+                                            <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="col-8 text-dark">
+                                        <div class="row  d-flex justify-content-start p-3">
+                                                <a href="#" class="text-dark mt-2 mb-2">KIMIA : The Big Three</a>
+                                                
+                                                <p class="text-macolor mb-2" style="font-size: 9pt;">
+                                                    Pengarang : Zulia Amalia <br>
+                                                    Penerbit : Naufal Hanif <br>
+                                                    Rp. 24.000 <br>
+                                                    1821 Jumlah Pembeli <br>
+                                                </p>
+                                         </div>
+                                    </div>
+                                </div>
+                                <div class="row mb-2">
+                                    <div class="col-4">
+                                        <a href="">
+                                            <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="col-8 text-dark">
+                                        <div class="row  d-flex justify-content-start p-3">
+                                                <a href="#" class="text-dark mt-2 mb-2">KIMIA : The Big Three</a>
+                                                
+                                                <p class="text-macolor mb-2" style="font-size: 9pt;">
+                                                    Pengarang : Zulia Amalia <br>
+                                                    Penerbit : Naufal Hanif <br>
+                                                    Rp. 24.000 <br>
+                                                    1821 Jumlah Pembeli <br>
+                                                </p>
+                                         </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <a class="text-macolor d-flex justify-content-center mb-4">Lainnya</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-between mb-4">
+            <div class="col">
+                <div class="row">
+                    <div class="col">
+                        <div class="card border-0 shadow-sm">
+                            <div class="card-body">
+                                <h6 class="font-weight-bold text-macolor">KATA KUNCI POPULER</h6>
+                                <hr>
+                                <div class="row mr-1 ml-1 d-flex justify-content-between">
+                                    <div class="card" style="width: 14rem;">
+                                        <button class="btn btn-sm btn-info">Informatika</button>
+                                    </div>
+                                    <div class="card" style="width: 14rem;">
+                                        <button class="btn btn-sm btn-info">IPTEK</button>
+                                    </div>
+                                    <div class="card" style="width: 14rem;">
+                                        <button class="btn btn-sm btn-info">Ilmu</button>
+                                    </div>
+                                    <div class="card" style="width: 14rem;">
+                                        <button class="btn btn-sm btn-info">Pria</button>
+                                    </div>
+                                    <div class="card" style="width: 14rem;">
+                                        <button class="btn btn-sm btn-info">Kesehatan</button>
+                                    </div>
+                                    <div class="card" style="width: 14rem;">
+                                        <button class="btn btn-sm btn-info">Piala Dunia</button>
+                                    </div>
+                                    <div class="card" style="width: 14rem;">
+                                        <button class="btn btn-sm btn-info">JavaScript</button>
+                                    </div>
+                                    <div class="card" style="width: 14rem;">
+                                        <button class="btn btn-sm btn-info">Komputer</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-between">
+            <div class="col">
+                <div class="row">
+                    <div class="col">
+                        <div class="card border-0 shadow-sm">
+                            <div class="card-body">
+                                <h6 class="font-weight-bold text-macolor">BUKU TERBARU</h6>
+                                <hr>
+                                <div class="row mr-1 ml-1 d-flex justify-content-between">
+                                    <div class="card" style="width: 14rem;">
+                                      <div class="card-body">
+                                            <img class="rounded col-auto" src="~/img/default.png" width="70px" height="120px" alt="">
+                                            <img class="rounded col-auto" src="~/img/default.png" width="70px" height="120px" alt="">
+                                        </div>
+                                        <div class="card-body">
+                                            <a href="#">
+                                                <h6 class="font-weight-bold text-dark">Seni Hidup Sederhana Untuk Puncak Kebahagian</h6>
+                                            </a>
+                                            <p class="text-macolor" style="font-size: 9pt;">129 Pengunjung &nbsp; 129 Komentar</p>
+                                        </div>
+                                    </div>
+                                    <a href="">
+                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                        <h6 class="font-weight-bold text-dark">Seni Hidup Sederhana Untuk Puncak Kebahagian</h6>
+                                    </a>
+                                    <a href="">
+                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                    </a>
+                                    <a href="">
+                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                    </a>
+                                    <a href="">
+                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
