--- a/JadwalMe/Views/Home/Buku.cshtml
+++ b/JadwalMe/Views/Home/Buku.cshtml
@@ -152,11 +152,13 @@
                             <div class="card-body">
                                 <h6 class="font-weight-bold text-macolor">BUKU TERBARU</h6>
                                 <hr>
-                                <div class="row mr-1 ml-1 d-flex justify-content-between">
-                                    <div class="card" style="width: 14rem;">
+                                <div class="row mr-1 ml-1 d-flex justify-content">
+                                    <div class="card" style="width: 16rem;">
                                       <div class="card-body">
-                                            <img class="rounded col-auto" src="~/img/default.png" width="70px" height="120px" alt="">
-                                            <img class="rounded col-auto" src="~/img/default.png" width="70px" height="120px" alt="">
+                                          <a href="">
+                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                        </a>
                                         </div>
                                         <div class="card-body">
                                             <a href="#">
@@ -165,23 +167,48 @@
                                             <p class="text-macolor" style="font-size: 9pt;">129 Pengunjung &nbsp; 129 Komentar</p>
                                         </div>
                                     </div>
-                                    <a href="">
+                                    <div class="card" style="width: 16rem;">
+                                      <div class="card-body">
+                                          <a href="">
                                         <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
                                         <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
-                                        <h6 class="font-weight-bold text-dark">Seni Hidup Sederhana Untuk Puncak Kebahagian</h6>
-                                    </a>
-                                    <a href="">
+                                        </a>
+                                        </div>
+                                        <div class="card-body">
+                                            <a href="#">
+                                                <h6 class="font-weight-bold text-dark">Seni Hidup Sederhana Untuk Puncak Kebahagian</h6>
+                                            </a>
+                                            <p class="text-macolor" style="font-size: 9pt;">129 Pengunjung &nbsp; 129 Komentar</p>
+                                        </div>
+                                    </div>
+                                    <div class="card" style="width: 16rem;">
+                                      <div class="card-body">
+                                          <a href="">
                                         <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
                                         <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
-                                    </a>
-                                    <a href="">
+                                        </a>
+                                        </div>
+                                        <div class="card-body">
+                                            <a href="#">
+                                                <h6 class="font-weight-bold text-dark">Seni Hidup Sederhana Untuk Puncak Kebahagian</h6>
+                                            </a>
+                                            <p class="text-macolor" style="font-size: 9pt;">129 Pengunjung &nbsp; 129 Komentar</p>
+                                        </div>
+                                    </div>
+                                    <div class="card" style="width: 16rem;">
+                                      <div class="card-body">
+                                          <a href="">
                                         <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
                                         <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
-                                    </a>
-                                    <a href="">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
-                                    </a>
+                                        </a>
+                                        </div>
+                                        <div class="card-body">
+                                            <a href="#">
+                                                <h6 class="font-weight-bold text-dark">Seni Hidup Sederhana Untuk Puncak Kebahagian</h6>
+                                            </a>
+                                            <p class="text-macolor" style="font-size: 9pt;">129 Pengunjung &nbsp; 129 Komentar</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
