--- a/JadwalMe/Views/Home/Beranda.cshtml
+++ b/JadwalMe/Views/Home/Beranda.cshtml
@@ -22,16 +22,16 @@
                                 <hr>
                                 <div class="row mr-1 ml-1 d-flex justify-content-between">
                                     <a href="">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                        <img class="rounded" src="~/img/beranda1.jpg" width="100px" height="150px" alt="">
                                     </a>
                                     <a href="">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                        <img class="rounded" src="~/img/beranda2.jpg" width="100px" height="150px" alt="">
                                     </a>
                                     <a href="">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                        <img class="rounded" src="~/img/beranda3.jpg"      width="100px" height="150px" alt="">
                                     </a>
                                     <a href="">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                        <img class="rounded" src="~/img/beranda4.jpg" width="100px" height="150px" alt="">
                                     </a>
                                     <a href="">
                                         <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
@@ -61,7 +61,7 @@
                                 <hr>
                                 <div class="row mb-2">
                                     <div class="col-4">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="100px" alt="">
+                                        <img class="rounded" src="~/img/gambar1.jpg" width="100px" height="100px" alt="">
                                     </div>
                                     <div class="col-8 text-dark">
                                         <div class="row d-flex justify-content-start p-3">
@@ -72,7 +72,7 @@
                                 </div>
                                 <div class="row mb-2">
                                     <div class="col-4">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="100px" alt="">
+                                        <img class="rounded" src="~/img/gambar2.png" width="100px" height="100px" alt="">
                                     </div>
                                     <div class="col-8 text-dark">
                                         <div class="row d-flex justify-content-start p-3">
@@ -83,7 +83,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-4">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="100px" alt="">
+                                        <img class="rounded" src="~/img/gambar3.jpg" width="100px" height="100px" alt="">
                                     </div>
                                     <div class="col-8 text-dark">
                                         <div class="row d-flex justify-content-start p-3">
@@ -109,7 +109,7 @@
                                 <hr>
                                 <div class="row mr-1 ml-1 d-flex justify-content-between">
                                     <div class="card" style="width: 14rem;">
-                                        <img class="card-img-top" src="~/img/default.png" alt="">
+                                        <img class="card-img-top" src="~/img/art1.jpeg" alt="">
                                         <div class="card-body">
                                             <a href="#">
                                                 <h6 class="font-weight-bold text-dark">Seni Hidup Sederhana Untuk Puncak Kebahagian</h6>
@@ -118,7 +118,7 @@
                                         </div>
                                     </div>
                                     <div class="card" style="width: 14rem;">
-                                        <img class="card-img-top" src="~/img/default.png" alt="">
+                                        <img class="card-img-top" src="~/img/art2.jpg" alt="">
                                         <div class="card-body">
                                             <a href="">
                                                 <h6 class="font-weight-bold text-dark">Kenali Fitur Terbaru Pada Windows 11</h6>
@@ -127,7 +127,7 @@
                                         </div>
                                     </div>
                                     <div class="card" style="width: 14rem;">
-                                        <img class="card-img-top" src="~/img/default.png" alt="">
+                                        <img class="card-img-top" src="~/img/art3.jpg" alt="">
                                         <div class="card-body">
                                             <a href="">
                                                 <h6 class="font-weight-bold text-dark">10 Laptop Terbaik Untuk Anak Informatika</h6>
@@ -136,7 +136,7 @@
                                         </div>
                                     </div>
                                     <div class="card" style="width: 14rem;">
-                                        <img class="card-img-top" src="~/img/default.png" alt="">
+                                        <img class="card-img-top" src="~/img/art4.jpg" alt="">
                                         <div class="card-body">
                                             <a href="#">
                                                 <h6 class="font-weight-bold text-dark">Seni Hidup Sederhana Untuk Puncak Kebahagian</h6>
