--- a/JadwalMe/Views/Home/Blog.cshtml
+++ b/JadwalMe/Views/Home/Blog.cshtml
@@ -42,7 +42,7 @@
                                 <hr>
                                 <div class="row mb-2">
                                     <div class="col-4">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="100px" alt="">
+                                        <img class="rounded" src="~/img/gambar1.jpg" width="100px" height="100px" alt="">                                     
                                     </div>
                                     <div class="col-8 text-dark">
                                         <div class="row d-flex justify-content-start p-3">
@@ -53,7 +53,7 @@
                                 </div>
                                 <div class="row mb-2">
                                     <div class="col-4">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="100px" alt="">
+                                        <img class="rounded" src="~/img/gambar2.png" width="100px" height="100px" alt="">
                                     </div>
                                     <div class="col-8 text-dark">
                                         <div class="row d-flex justify-content-start p-3">
@@ -64,7 +64,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-4">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="100px" alt="">
+                                        <img class="rounded" src="~/img/gambar3.jpg" width="100px" height="100px" alt="">
                                     </div>
                                     <div class="col-8 text-dark">
                                         <div class="row d-flex justify-content-start p-3">
@@ -130,7 +130,7 @@
                                 <hr>
                                 <div class="row mr-1 ml-1 d-flex justify-content-between">
                                     <div class="card" style="width: 14rem;">
-                                        <img class="card-img-top" src="~/img/default.png" alt="">
+                                        <img class="card-img-top" src="~/img/art1.jpeg" alt="">
                                         <div class="card-body">
                                             <a href="#">
                                                 <h6 class="font-weight-bold text-dark">Seni Hidup Sederhana Untuk Puncak Kebahagian</h6>
@@ -139,7 +139,7 @@
                                         </div>
                                     </div>
                                     <div class="card" style="width: 14rem;">
-                                        <img class="card-img-top" src="~/img/default.png" alt="">
+                                        <img class="card-img-top" src="~/img/art2.jpg" alt="">
                                         <div class="card-body">
                                             <a href="">
                                                 <h6 class="font-weight-bold text-dark">Kenali Fitur Terbaru Pada Windows 11</h6>
@@ -148,7 +148,7 @@
                                         </div>
                                     </div>
                                     <div class="card" style="width: 14rem;">
-                                        <img class="card-img-top" src="~/img/default.png" alt="">
+                                        <img class="card-img-top" src="~/img/art3.jpg" alt="">
                                         <div class="card-body">
                                             <a href="">
                                                 <h6 class="font-weight-bold text-dark">10 Laptop Terbaik Untuk Anak Informatika</h6>
@@ -157,7 +157,7 @@
                                         </div>
                                     </div>
                                     <div class="card" style="width: 14rem;">
-                                        <img class="card-img-top" src="~/img/default.png" alt="">
+                                        <img class="card-img-top" src="~/img/art4.jpg" alt="">
                                         <div class="card-body">
                                             <a href="#">
                                                 <h6 class="font-weight-bold text-dark">Seni Hidup Sederhana Untuk Puncak Kebahagian</h6>
