--- a/JadwalMe/Views/Home/Blog.cshtml
+++ b/JadwalMe/Views/Home/Blog.cshtml
@@ -16,7 +16,7 @@
                                         <input class="form-control" type="text" placeholder="Cari artikel...">
                                     </div>
                                     <a role="button" class="col-2 btn" style="background-color: #FC7666;">
-                                        <img src="img/send-exclamation-fill.svg" class="iconsvg" alt="">
+                                        <img src="~/img/send-exclamation-fill.svg" class="iconsvg" alt="">
                                     </a>
                                 </div>
                             </div>
