update card book

--- a/JadwalMe/Views/Home/Buku.cshtml
+++ b/JadwalMe/Views/Home/Buku.cshtml
@@ -16,7 +16,7 @@
                                         <input class="form-control" type="text" placeholder="Cari artikel...">
                                     </div>
                                     <a role="button" class="col-2 btn" style="background-color: #FC7666;">
-                                        <img src="img/send-exclamation-fill.svg" class="iconsvg" alt="">
+                                        <img src="~/img/send-exclamation-fill.svg"s class="iconsvg" alt="">
                                     </a>
                                 </div>
                             </div>
@@ -152,61 +152,61 @@
                             <div class="card-body">
                                 <h6 class="font-weight-bold text-macolor">BUKU TERBARU</h6>
                                 <hr>
-                                <div class="row mr-1 ml-1 d-flex justify-content">
-                                    <div class="card" style="width: 16rem;">
+                                <div class="row mr-1 ml-1 d-flex justify-content-between">
+                                    <div class="card" style="width: 13rem;">
                                       <div class="card-body">
-                                          <a href="">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                          <a href="" class="d-flex justify-content-between">
+                                            <img class="rounded" src="~/img/default.png" width="80px" height="120px" alt="">
+                                            <img class="rounded" src="~/img/default.png" width="80px" height="120px" alt="">
                                         </a>
                                         </div>
                                         <div class="card-body">
                                             <a href="#">
                                                 <h6 class="font-weight-bold text-dark">Seni Hidup Sederhana Untuk Puncak Kebahagian</h6>
                                             </a>
-                                            <p class="text-macolor" style="font-size: 9pt;">129 Pengunjung &nbsp; 129 Komentar</p>
+                                            <p class="text-macolor" style="font-size: 9pt;">Rp. 120.000</p>
                                         </div>
                                     </div>
-                                    <div class="card" style="width: 16rem;">
+                                    <div class="card" style="width: 13rem;">
                                       <div class="card-body">
-                                          <a href="">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                          <a href="" class="d-flex justify-content-between">
+                                        <img class="rounded" src="~/img/default.png" width="80px" height="120px" alt="">
+                                        <img class="rounded" src="~/img/default.png" width="80px" height="120px" alt="">
                                         </a>
                                         </div>
                                         <div class="card-body">
                                             <a href="#">
                                                 <h6 class="font-weight-bold text-dark">Seni Hidup Sederhana Untuk Puncak Kebahagian</h6>
                                             </a>
-                                            <p class="text-macolor" style="font-size: 9pt;">129 Pengunjung &nbsp; 129 Komentar</p>
+                                            <p class="text-macolor" style="font-size: 9pt;">Rp. 43.000</p>
                                         </div>
                                     </div>
-                                    <div class="card" style="width: 16rem;">
+                                    <div class="card" style="width: 13rem;">
                                       <div class="card-body">
-                                          <a href="">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                          <a href="" class="d-flex justify-content-between">
+                                        <img class="rounded" src="~/img/default.png" width="80px" height="120px" alt="">
+                                        <img class="rounded" src="~/img/default.png" width="80px" height="120px" alt="">
                                         </a>
                                         </div>
                                         <div class="card-body">
                                             <a href="#">
                                                 <h6 class="font-weight-bold text-dark">Seni Hidup Sederhana Untuk Puncak Kebahagian</h6>
                                             </a>
-                                            <p class="text-macolor" style="font-size: 9pt;">129 Pengunjung &nbsp; 129 Komentar</p>
+                                            <p class="text-macolor" style="font-size: 9pt;">Rp. 21.000</p>
                                         </div>
                                     </div>
-                                    <div class="card" style="width: 16rem;">
+                                    <div class="card" style="width: 13rem;">
                                       <div class="card-body">
-                                          <a href="">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
-                                        <img class="rounded" src="~/img/default.png" width="100px" height="150px" alt="">
+                                          <a href="" class="d-flex justify-content-between">
+                                        <img class="rounded" src="~/img/default.png" width="80px" height="120px" alt="">
+                                        <img class="rounded" src="~/img/default.png" width="80px" height="120px" alt="">
                                         </a>
                                         </div>
                                         <div class="card-body">
                                             <a href="#">
                                                 <h6 class="font-weight-bold text-dark">Seni Hidup Sederhana Untuk Puncak Kebahagian</h6>
                                             </a>
-                                            <p class="text-macolor" style="font-size: 9pt;">129 Pengunjung &nbsp; 129 Komentar</p>
+                                            <p class="text-macolor" style="font-size: 9pt;">Rp. 34.000</p>
                                         </div>
                                     </div>
                                 </div>
