--- a/JadwalMe/Views/Home/Buku.cshtml
+++ b/JadwalMe/Views/Home/Buku.cshtml
@@ -13,7 +13,7 @@
                             <div class="card-body">
                                 <div class="row mr-1 ml-1 d-flex justify-content-between">
                                     <div class="col-10">
-                                        <input class="form-control" type="text" placeholder="Cari artikel...">
+                                        <input class="form-control" type="text" placeholder="Cari buku...">
                                     </div>
                                     <a role="button" class="col-2 btn" style="background-color: #FC7666;">
                                         <img src="~/img/send-exclamation-fill.svg"s class="iconsvg" alt="">
